--- a/University/Pages/Student.css
+++ b/University/Pages/Student.css
@@ -1,3 +1,10 @@
+   * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+   
    .right-contact-main-container {
         position: fixed;
         transition: 2s;
@@ -248,12 +255,7 @@
  
  
  
- * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+ 
 
         /* ================= SLIDER ================= */
 
@@ -524,3 +526,119 @@
             color: #555;
             line-height: 1.6;
                 }
+
+
+
+
+
+.footer{
+    background: url('https://images.unsplash.com/photo-1523240795612-9a054b0db644') no-repeat center center/cover;
+    position:relative;
+    color:white;
+    width: 100%;
+}
+
+.footer-overlay{
+    background:rgba(19, 22, 92, 0.92);
+    padding:60px 80px 30px;
+    
+
+}
+
+.footer-container{
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    gap:40px;
+}
+
+.footer-col{
+    width:22%;
+}
+
+.footer-col h3{
+    margin-bottom:20px;
+    position:relative;
+    font-size:18px;
+}
+
+.footer-col h3::after{
+    content:"";
+    width:40px;
+    height:2px;
+    background:#fff;
+    position:absolute;
+    bottom:-8px;
+    left:0;
+}
+
+.footer-col ul{
+    list-style:none;
+}
+
+.footer-col ul li{
+    margin:12px 0;
+    font-size:14px;
+    line-height:1.6;
+    cursor:pointer;
+    transition:0.3s;
+}
+
+.footer-col ul li i{
+    margin-right:8px;
+}
+
+.footer-col ul li:hover{
+    padding-left:5px;
+    color:#ffb703;
+}
+
+.footer-bottom{
+    text-align:center;
+    margin-top:40px;
+    border-top:1px dashed rgba(255,255,255,0.4);
+    padding-top:25px;
+}
+
+.footer-bottom p{
+    margin-bottom:20px;
+    letter-spacing:1px;
+    font-weight:600;
+}
+
+.social-icons i{
+    margin:0 10px;
+    font-size:16px;
+    background:#fff;
+    color:#13165c;
+    width:35px;
+    height:35px;
+    line-height:35px;
+    border-radius:50%;
+    cursor:pointer;
+    transition:0.3s;
+}
+
+.social-icons i:hover{
+    background:#ffb703;
+    color:#000;
+}
+
+/* Responsive */
+@media(max-width:992px){
+    .footer-col{
+        width:45%;
+    }
+}
+
+@media(max-width:600px){
+    .footer-col{
+        width:100%;
+    }
+
+    .footer-overlay{
+        padding:40px 20px;
+    }
+}
+
+
