--- a/University/Pages/Courses.css
+++ b/University/Pages/Courses.css
@@ -59,7 +59,7 @@
         list-style: none;
         display: flex;
         gap: 30px;
-        margin-left: auto;
+        margin-left: 550px;
       }
 
       .menu li a {
